--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./app/index.mjs",
-    "eslint": "eslint ./app --fix"
+    "eslint": "eslint ./app --fix",
+    "prettier": "prettier ./app --write"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "eslint": "^9.25.1",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3"
   }
 }
